--- a/rate-repository-app/.eslintrc
+++ b/rate-repository-app/.eslintrc
@@ -1,49 +1,49 @@
 {
     "plugins": ["react", "react-native"],
     "settings": {
-        "react": {
-            "version": "detect"
-        }
+    "react": {
+        "version": "detect"
+    }
     },
     "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:jest/recommended"],
     "parser": "@babel/eslint-parser",
     "env": {
-        "react-native/react-native": true
+    "react-native/react-native": true
     },
     "rules": {
-        "indent": [
-          "error",
-          4,
-          { "SwitchCase":  1 }
-        ],
-        "linebreak-style": [
-          "error",
-          "unix"
-        ],
-        "quotes": [
-          "error",
-          "single"
-        ],
-        "semi": [
-          "error",
-          "always"
-        ],
-        "eqeqeq": "error",
-        "no-trailing-spaces": "error",
-        "object-curly-spacing": [
-          "error",
-          "always"
-        ],
-        "arrow-spacing": [
-          "error",
-          { "before": true, "after": true }
-        ],
-        "eol-last": [
-          "error",
-          "always"
-        ],
-        "no-console": 0,
-        "react/prop-types": "off",
-        "react/react-in-jsx-scope": "off",
+    "indent": [
+        "error",
+        4,
+        { "SwitchCase":  1 }
+    ],
+    "linebreak-style": [
+        "error",
+        "unix"
+    ],
+    "quotes": [
+        "error",
+        "single"
+    ],
+    "semi": [
+        "error",
+        "always"
+    ],
+    "eqeqeq": "error",
+    "no-trailing-spaces": "error",
+    "object-curly-spacing": [
+        "error",
+        "always"
+    ],
+    "arrow-spacing": [
+        "error",
+        { "before": true, "after": true }
+    ],
+    "eol-last": [
+        "error",
+        "always"
+    ],
+    "no-console": 0,
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off"
     }
 }
